# Brickgame_v2.0

./: CMakeLists.txt  Doxyfile  Makefile  README.md  brickgame.cc  brickgame.cpp  brickgame.h  inline.h  lib_struct.h
brick_game/snake/: snake.cpp  snake.h
brick_game/tetris/: dbscore.c  lib_spec.c  tetris.c  tetris.h  txtscore.c
gui/cli/: user_screen.c  user_screen.h
gui/desktop/: desktop_screen.cpp  desktop_screen.h
headers/: lib_spec.h  tetris.h  user_screen.h
src/: CMakeLists.txt  Makefile  brickgame.cc  brickgame.h  inline.h
src/brick_game/snake/: snake.cc
src/brick_game/tetris/: tetris.c  tetris.h
src/gui/cli/: user_screen.c
src/gui/desktop/: desktop_screen.cc
src/tests/: test.c  test.h  tetris_test.c
tests/: snake_test.cc  test.h  tetris_test.c
